translation-tool/inputs/source_meta/objects/Language_To_Field_Mapping__c.object
<CustomObject>
    <description>This object is used to map the language specific field api in any sObject</description>
    <fields>
        <fullName>Email_Template_Name__c</fullName>
        <label>Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <inlineHelpText>Enter field API Name</inlineHelpText>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <inlineHelpText>Object API Name</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Language To Field Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field_Name__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Language__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LFM-{0000}</displayFormat>
        <label>LanguageToField Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Language To Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>